crates/tests/tests/ui/private_fn_error.stderr
error[E0603]: function `decode` is private
  --> tests/ui/private_fn_error.rs:5:26
   |
5  |     #[musli(with = self::array)]
   |                          ^^^^^ private function
   |
note: the function `decode` is defined here
  --> tests/ui/private_fn_error.rs:22:5
   |
22 | /     fn decode<'de, C, D, T, const N: usize>(cx: &C, decoder: D) -> Result<[T; N], C::Error>
23 | |     where
24 | |         C: Context<Input = D::Error>,
25 | |         D: Decoder<'de>,
26 | |     {
27 | |         todo!()
28 | |     }
   | |_____^
